# platform-design

./: .checkov.yaml  .checkov.yml  .editorconfig  .gitignore  .gitleaks.toml  .tflint.hcl  .tool-versions  .trivyignore  .yamllint  .yamllint.yml  CHANGELOG.md  DEPLOYMENTS.md  KARPENTER_IMPLEMENTATION.md  PLAN.md  PROJECT_STATUS.md  README.md  ROADMAP.md  TODO.md  deployments.json  infracost.yml
ai-sre/: Dockerfile  pyproject.toml
ai-sre/agents/: __init__.py
ai-sre/agents/cloud/: __init__.py  agent.py  collector.py  correlation.py  iam_policy.py
ai-sre/agents/cost/: __init__.py  agent.py
ai-sre/agents/gpu-health/: __init__.py  agent.py
ai-sre/agents/incident/: __init__.py  agent.py  (+1 more)
ai-sre/analytics/: __init__.py  client.py  slack_feedback.py  test_tracker.py  tracker.py
ai-sre/guardrails/: __init__.py  audit.py  rate_limiter.py  read_only.py  secret_scanner.py
ai-sre/ingestion/: __init__.py  api.py  dedup.py  enrichment.py  metrics.py  models.py  router.py
ai-sre/knowledge/: cilium-bgp-issues.md  eks-upgrade-checklist.md  gpu-driver-updates.md  nccl-troubleshooting.md
ai-sre/memory/: __init__.py  incident_store.py  slo_store.py  slos.yaml  topology.yaml  topology_store.py
ai-sre/observability/: __init__.py  cost_tracker.py  feedback.py  health.py  metrics.py  slos.py
ai-sre/runbooks/: gpu-node-unhealthy.md  high-pod-restart-rate.md  vllm-high-latency.md
ai-sre/slack/: __init__.py  app.py  blocks.py  channels.py  commands.py  interactions.py  listeners.py  main.py
ai-sre/tests/: test_gitops.py  test_orchestrator.py  test_read_only.py
(+2110 files in other folders)
